# apptrail

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  jobs.py  resumes.py
backend/app/core/: config.py  security.py  storage.py
backend/app/models/: job.py  resume.py
backend/app/services/: job_service.py  resume_service.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/public/: manifest.json
frontend/src/: main.tsx
frontend/src/client/: auth.ts  index.ts  jobs.ts  resumes.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/ui/: dialog.tsx  provider.tsx  toaster.tsx  tooltip.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useJobs.ts  useResumes.ts
frontend/src/routes/: __root.tsx  login.tsx  settings.tsx  setup.tsx
frontend/src/routes/jobs/: index.tsx
frontend/src/routes/resumes/: index.tsx
frontend/src/types/: index.ts
