[project]
name = "apptrail"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5.0",
    "python-docx>=1.1.2",
    "pdfplumber>=0.11.0",
    "aiofiles>=24.1.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
